# uvc-gadget

./: CMakeLists.txt  Readme.md  uvc-gadget.c
doc/: usb-gadget-config.sh
